2006-06-15  Junichi Uekawa  <dancer@debian.org>

	* tests/901_test_pbuilder_create.sh: check for failure states in test.

	* tests/902_test_cowbuilder_fail.sh: check that exit code is
	processed properly; it seems like it isn't in some cases?

	* tests/010_test_noilistfile.sh: variable was wrong, it should be
	COWDANCER_ILISTFILE
	
	* cowbuilder.c (main): mkdir with 0777, not 777.

2006-06-11  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c (ilistcreate): use find -links +1.
	(ilistcreate): fix the -type f location, it needs to be before
	-print0
	(ilistcreate): error out with a message when there is no
	hardlinked file.

	[14:32:00]dancer64:test> touch 1 2-1 3-1 4-1
	[14:32:07]dancer64:test> ln 2-1 2-2
	[14:32:10]dancer64:test> ln 3-1 3-2
	[14:32:13]dancer64:test> ln 3-1 3-3
	[14:32:14]dancer64:test> ln 4-1 4-2
	[14:32:18]dancer64:test> ln 4-1 4-3
	[14:32:19]dancer64:test> ln 4-1 4-4
	[14:32:20]dancer64:test> ls -li
	242255 -rw-r--r-- 1 dancer dancer 0 2006-06-11 14:32 1
	242258 -rw-r--r-- 2 dancer dancer 0 2006-06-11 14:32 2-1
	242258 -rw-r--r-- 2 dancer dancer 0 2006-06-11 14:32 2-2
	242262 -rw-r--r-- 3 dancer dancer 0 2006-06-11 14:32 3-1
	242262 -rw-r--r-- 3 dancer dancer 0 2006-06-11 14:32 3-2
	242262 -rw-r--r-- 3 dancer dancer 0 2006-06-11 14:32 3-3
	242263 -rw-r--r-- 4 dancer dancer 0 2006-06-11 14:32 4-1
	242263 -rw-r--r-- 4 dancer dancer 0 2006-06-11 14:32 4-2
	242263 -rw-r--r-- 4 dancer dancer 0 2006-06-11 14:32 4-3
	242263 -rw-r--r-- 4 dancer dancer 0 2006-06-11 14:32 4-4
	[14:32:22]dancer64:test> find -links +2
	./3-1
	./4-1
	./3-2
	./3-3
	./4-2
	./4-3
	./4-4
	[14:32:31]dancer64:test> find -links +1
	.
	./2-1
	./3-1
	./4-1
	./2-2
	./3-2
	./3-3
	./4-2
	./4-3
	./4-4
	[14:32:34]dancer64:test> find -links +3
	./4-1
	./4-2
	./4-3
	./4-4


	* cowdancer.c (check_inode_and_copy): test for regular files
	before investing too much.
	(check_inode_and_copy): check that st_nlink > 1, otherwise, it's
	not hardlinked at all.
