@@ -81,6 +81,11 @@ Utilized to preload
 Enables debug messages.
 cowdancer will give debug messages in standard error output.
 
+.TP
+.B "COWDANCER_REUSE=yes"
+Enables reuse of cowdancer .ilist file found for consecutive runs of
+cow-shell.
+
 .SH "RETURN VALUE"
 
 The functions that are overridden with cowdancer will give an errno
